tests/neg/objects/obj-08.ts

/*@ a :: { b: { c: string } } */
var a  = { b : { c: 3 }, e : "st" };


